# wapc-rs

./: .gitignore  Cargo.toml  Makefile  README.md  interface.wai  rust-toolchain.toml
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security-audit-cron.yml  security-audit-reactive.yml  test.yml  tests.yml  update-rust-toolchain.yaml
crates/wapc/: Cargo.toml  README.md
crates/wapc-codec/: Cargo.toml  README.md
crates/wapc-codec/examples/: roundtrip.rs
crates/wapc-codec/src/: errors.rs  lib.rs  messagepack.rs
crates/wapc-guest/: Cargo.toml  README.md
crates/wapc-guest/src/: errors.rs  lib.rs  prelude.rs  protocol.rs
crates/wapc-pool/: Cargo.toml  README.md
crates/wapc-pool/examples/: pool.rs
crates/wapc-pool/src/: errors.rs  hostpool.rs  lib.rs
crates/wapc-pool/tests/: benchmark.rs
crates/wapc/src/: errors.rs  lib.rs  wapc_functions.rs  wapchost.rs  wasi.rs
crates/wapc/src/wapchost/: host.rs  host_async.rs  modulestate.rs  modulestate_async.rs  traits.rs
crates/wasm3-provider/: Cargo.toml  Makefile  README.md
crates/wasm3-provider/.github/workflows/: release.yml
crates/wasm3-provider/examples/: wasm3-demo.rs
crates/wasm3-provider/src/: callbacks.rs  errors.rs  lib.rs
crates/wasm3-provider/tests/: hello.rs  wapc_guest.rs
crates/wasmtime-provider/: Cargo.toml  Makefile  README.md  rustfmt.toml
crates/wasmtime-provider/.github/workflows/: release.yml
crates/wasmtime-provider/examples/: wasmtime-demo.rs  wasmtime-hash-mreplace.rs
crates/wasmtime-provider/examples/demo/: main.rs
crates/wasmtime-provider/examples/demo-async/: main.rs
crates/wasmtime-provider/examples/hash-mreplace/: main.rs
crates/wasmtime-provider/examples/hash-mreplace-async/: main.rs
crates/wasmtime-provider/src/: builder.rs  callbacks.rs  callbacks_async.rs  errors.rs  lib.rs  provider.rs  provider_async.rs  store.rs  store_async.rs  wasi.rs
crates/wasmtime-provider/tests/: calc_hash.rs  hello.rs  wapc_guest.rs
crates/wasmtime-provider/tests/wasm/wapc_guest/: Cargo.toml
examples/: demo.rs
src/: callbacks.rs  errors.rs  lib.rs  modreg.rs  prelude.rs  wasi.rs
tests/: hello.rs  wapc_guest.rs
updatecli/: values.yaml
updatecli/updatecli.d/: update-rust-toolchain.yaml
wapc-guest-codegen/: README.md  package-lock.json  package.json  tsconfig.json
wapc-guest-codegen/config/: .eslintrc.json
wapc-guest-codegen/src/: constant.ts  handlers_visitor.ts  helpers.ts  host-visitor.ts  host_visitor.ts  index.ts  integration.ts  module_visitor.ts  scaffold_visitor.ts  struct_visitor.ts  wrappers_visitor.ts
wapc-guest-codegen/src/utils/: index.ts
wapc-guest-codegen/templates/: .template  Cargo.toml.tmpl  schema.widl
wasm/crates/wapc-guest-test/: Cargo.toml  Makefile  apex.yaml  codegen.yaml  codegen.yaml.tmpl  output.wasm  schema.apexlang
wasm/crates/wapc-guest-test/src/: generated.rs  lib.rs
wasm/crates/wapc-guest-timeout/: Cargo.toml  Makefile
wasm/crates/wapc-guest-timeout/src/: lib.rs
wasm/crates/wasi-basic/: Cargo.toml  Makefile
wasm/crates/wasi-basic/src/: lib.rs
wasm/crates/wasm-basic/: Cargo.toml
wasm/crates/wasm-basic/src/: lib.rs
wasm/crates/wasm-calc-hash/module1/: Cargo.toml  Makefile
wasm/crates/wasm-calc-hash/module1/src/: lib.rs
wasm/crates/wasm-calc-hash/module2/: .gitignore  Cargo.toml  README
wasm/crates/wasm-calc-hash/module2/src/: lib.rs
