[package]
name = "wasmtime-provider"
version = "0.0.5"
authors = ["waPC Team"]
edition = "2018"
exclude = [".assets"]
description = "A wasmtime engine provider for the waPC host"
license = "Apache-2.0"
homepage = "https://github.com/wapc/wasmtime-provider"
documentation = "https://docs.rs/wasmtime-provider"
readme = "README.md"
keywords = ["sdk", "wapc", "webassembly", "wasm", "wasmtime"]
categories = ["wasm", "api-bindings"]

[features]
default = ["wasi"]
cache = ["wasmtime/cache"]
wasi = ["wasi-common", "wasi-cap-std-sync", "wasmtime-wasi"]

[dependencies]
wapc = "0.10.1"
log = "0.4.11"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
wasmtime = "0.30.0"
anyhow = "1.0.31"
cap-std = "0.19.1"
cfg-if = "1.0.0"

# feature = wasi
wasmtime-wasi = { version = "0.30.0", optional = true }
wasi-common = { version = "0.30.0", optional = true }
wasi-cap-std-sync = { version = "0.30.0", optional = true }


[dev-dependencies]
wascc-codec = "0.9.1"
env_logger = "0.9"
