[package]
name = "wapc-guest"
version = "0.4.0"
authors = [
  "Kevin Hoffman <alothien@gmail.com>",
  "Jarrod Overson <jsoverson@gmail.com>",
  "Phil Kedy <phil.kedy@gmail.com>",
]
edition = "2021"
description = "Guest SDK for building waPC-compliant WebAssembly Modules"
license = "Apache-2.0"
homepage = "https://wapc.io"
documentation = "https://docs.rs/wapc-guest"
readme = "README.md"
keywords = ["sdk", "wapc", "webassembly", "wasm", "waxosuit"]
categories = ["wasm", "api-bindings"]

[badges.maintenance]
status = "actively-developed"

[dependencies]
lazy_static = "1.4.0"
