[package]
name = "wasmtime-provider"
version = "2.14.0"
authors = [
  "Kevin Hoffman <alothien@gmail.com>",
  "Jarrod Overson <jsoverson@gmail.com>",
  "Phil Kedy <phil.kedy@gmail.com>",
  "Flavio Castelli <flavio@castelli.me>",
]
edition = "2021"
description = "A wasmtime engine provider for the waPC host"
license = "Apache-2.0"
homepage = "https://wapc.io"
documentation = "https://docs.rs/wasmtime-provider"
readme = "README.md"
keywords = ["sdk", "wapc", "webassembly", "wasm", "wasmtime"]
categories = ["wasm", "api-bindings"]

[package.metadata.docs.rs]
all-features = true

[package.metadata.workspaces]
independent = true

[badges.maintenance]
status = "actively-developed"

[features]
default = ["wasi", "async"]
cache = ["wasmtime/cache"]
wasi = ["wasi-common", "wasmtime-wasi", "cap-std"]
async = [
  "wapc/async",
  "wasi-common/tokio",
  "wasmtime/async",
  "async-trait",
  "tokio",
]

[dependencies]
wapc = { path = "../wapc", version = "2.1.0" }
log = "0.4"
wasmtime = { version = "39.0", default-features = false, features = [
  'cache',
  'gc',
  'gc-drc',
  'gc-null',
  'wat',
  'profiling',
  'parallel-compilation',
  'cranelift',
  'pooling-allocator',
  'demangle',
  'addr2line',
  'coredump',
  'debug-builtins',
  'runtime',
  'component-model',
  'threads',
  'std',
] }
anyhow = "1.0"
thiserror = "2.0"
cfg-if = "1.0"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
# feature = wasi
wasmtime-wasi = { version = "39.0", optional = true }
wasi-common = { version = "39.0", optional = true }
cap-std = { version = "3.4", optional = true }
async-trait = { version = "0.1", optional = true }
tokio = { version = "1", optional = true, default-features = false, features = [
  "rt",
] }
tracing = "0.1"

[dev-dependencies]
wapc-codec = { path = "../wapc-codec" }
env_logger = "0.11"
hex = "0.4"
tokio = { version = "1", features = ["full"] }

[[example]]
name = "demo"

[[example]]
name = "demo-async"
required-features = ["async"]

[[example]]
name = "hash-mreplace"

[[example]]
name = "hash-mreplace-async"
required-features = ["async"]
