[package]
name = "wapc-guest-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["guest"]
guest = []

[dependencies]
wapc-guest = { path = "../../../crates/wapc-guest" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "0.15.4"
log = { version = "0.4", features = ["std", "serde"] }
lazy_static = "1.4"

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
