[package]
name = "wapc-guest-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["guest"]
guest = []

[dependencies]
# wapc-guest = { path = "../../../crates/wapc-guest", features = [] }
wapc-guest = { path = "../../../crates/wapc-guest", features = ["codec"] }
serde = { version = "1", features = ["derive"] }
# serde = { version = "1.0", features = ["derive"] }
once_cell = "1.9"

[profile.release]
codegen-units = 1
# Optimize for small code size
opt-level = "s"
lto = true
