[package]
name = "module1-hash"
version = "0.1.0"
authors = ["Jarrod Overson <jsoverson@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wapc-guest = { path = "../../../../crates/wapc-guest" }
wapc-codec = {path = "../../../../crates/wapc-codec"}
serde = { version = "1.0", features = ["derive"] }
rmp-serde = { version = "1.0", optional = true }

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
